.provarCaches/00D6C0000000xA6UAI/objects/sked__Availability_Pattern_Resource__c.object
<CustomObject>
    <fields>
        <fullName>sked__Availability_Pattern__c</fullName>
        <label>Availability Pattern</label>
        <referenceTo>sked__Availability_Pattern__c</referenceTo>
        <relationshipLabel>Availability Pattern Resources</relationshipLabel>
        <relationshipName>Availability_Pattern_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Availability Pattern Resources</relationshipLabel>
        <relationshipName>Availability_Pattern_Resources</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Availability Pattern Resource</label>
    <nameField>
        <displayFormat>APR-{0000}</displayFormat>
        <label>Availability Pattern Resource Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability Pattern Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>